<resources>
    <string name="app_name">Compositions</string>
    <string name="welcome_title">Состав Числа</string>
    <string name="game_rules">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостающее число.\n\nПример: в верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно быть число 3, потому что 3 + 4 = 7</string>
    <string name="select_a_level">Выберете уровень</string>
    <string name="level_easy">легкий</string>
    <string name="level_normal">нормальный</string>
    <string name="level_hard">тяжелый</string>
    <string name="level_test">тест</string>
    <string name="answer_progress">Правильных ответов: %s (минимум %s)</string>
    <string name="question_mark">\?</string>
    <string name="button_understand">понятно!</string>
    <string name="retry">попробовать снова</string>
    <string name="score_answers">Ваш счет: %s</string>
    <string name="score_percentage">Процент правильных ответов: %s</string>
    <string name="right_answers">Правильных ответов %s из %s необходимых</string>
    <string name="required_percentage">Необходимый процент правильных ответов: %s</string>
    <string name="required_score">Необходимое количество правильных ответов: %s</string>
    <string name="logo_game_over">Логотип игра окончена</string>

    <style name="QuestionsTextStyle">
        <item name="android:padding">16dp</item>
        <item name="android:textColor">@color/white</item>
        <item name="android:textSize">48sp</item>
        <item name="android:layout_margin">8dp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:gravity">center</item>


    </style>

    <style name="OptionsTextStyle">
        <item name="android:padding">16dp</item>
        <item name="android:textColor">@color/white</item>
        <item name="android:textSize">36sp</item>
        <item name="android:gravity">center</item>
    </style>
</resources>